Tota11y corrections: Button Contrast and Input label

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ input {
 
 #button {
 	display: inline-block;
-	background-color: #fc999b;
+	background-color: #be4a4c;
 	color: #ffffff;
 	border-radius: 5px;
 	text-align: center;
